[metadata]
name = cloud_tools
version = 0.0.1
author = James Washington
author_email = jwashington104.jw@gmail.com
description = A python package for checking cloud systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = hhttps://github.com/never00rei/cloud_tools
project_urls =
    Bug Tracker = https://github.com/never00rei/cloud_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src