[metadata]
name = cloud_tools
version = 0.0.1
author = James Washington
author_email = jwashington104.jw@gmail.com
description = A python package for checking cloud systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = hhttps://github.com/never00rei/cloud_tools
project_urls =
    Bug Tracker = https://github.com/never00rei/cloud_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    boto3 == 1.21.14
    botocore == 1.24.14
    click == 8.0.4
    colorama == 0.4.4
    commonmark == 0.9.1
    jmespath == 0.10.0
    Pygments == 2.11.2
    python-dateutil == 2.8.2
    rich == 11.2.0
    s3transfer == 0.5.2
    six == 1.16.0
    urllib3 == 1.26.8

[options.packages.find]
where = src